--- a/index.html
+++ b/index.html
@@ -14,22 +14,21 @@
 	<body class="is-preload">
 		<!-- Header -->
 			<div id="header">
-				<span class="logo icon fa-paper-plane"></span>
+<!--				<span class="logo icon">🛠️</span>-->
 				<h1>Michał Dittmajer</h1>
-				<p>Remonty | Wykończenia | Instalacje 🛠️</p>
-				<p></p>
-				<p></p>
+				<p>Remonty | Wykończenia | Instalacje</p>
+				<div class="header-icons">
+					<div class="custom-icon"><a href="https://www.instagram.com/michaldittmajer/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></div>
+					<div><a href="https://www.instagram.com/michaldittmajer/">@michaldittmajer</a></div>
+				</div>
+
 			</div>
 
 		<!-- Main -->
 			<div id="main">
 
 				<header class="major container medium">
-					<h2>️
-					<br />
-						Poznań i okolice ✅
-					<br />
-						20 lat doświadczenia ⬇️</h2>
+					<h2>O nas</h2>
 					<!--
 					<p>Tellus erat mauris ipsum fermentum<br />
 					etiam vivamus nunc nibh morbi.</p>
@@ -38,24 +37,31 @@
 
 				<div class="box alt container">
 					<section class="feature left">
-						<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+						<div class="image"><img src="images/pic01.jpg" alt="" /></div>
 						<div class="content">
 							<h3>Usługi</h3>
-							<p>Oferujemy kompleksowe usługi remontowe i wykończeniowe, zapewniając wysoką jakość oraz solidną obsługę, które przynoszą satysfakcję naszym klientom.</p>
+							<p>Oferujemy kompleksowe usługi remontowe i wykończenia pod klucz, zapewniając wysoką jakość oraz solidną obsługę, które przynoszą satysfakcję naszym klientom.</p>
 						</div>
 					</section>
 					<section class="feature right">
-						<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+						<div class="image"><img src="images/pic02.jpg" alt="" /></div>
 						<div class="content">
 							<h3>20 lat doświadczenia</h3>
 							<p>Z ponad dwudziestoletnim doświadczeniem w branży remontowo-wykończeniowej, jesteśmy dumni z bogatego doświadczenia i umiejętności, które zdobyliśmy na przestrzeni lat.</p>
 						</div>
 					</section>
 					<section class="feature left">
-						<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+						<div class="image"><img src="images/pic03.jpg" alt="" /></div>
 						<div class="content">
 							<h3>Poznan i okolice</h3>
 							<p>Podejmujemy się zleceń z Poznania i okolic.</p>
+						</div>
+					</section>
+					<section class="feature right">
+						<div class="image"><img src="images/pic04.jpg" alt="" /></div>
+						<div class="content">
+							<h3>Projekty</h3>
+							<p>Poznaj zrealizowane przez nas projekty na <a href="https://www.instagram.com/michaldittmajer/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></p>
 						</div>
 					</section>
 				</div>
@@ -203,14 +209,6 @@
 				</div>
 				-->
 
-				<footer class="major container medium">
-					<h3>Get shady with science</h3>
-					<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus.</p>
-					<ul class="actions special">
-						<li><a href="#" class="button">Join our crew</a></li>
-					</ul>
-				</footer>
-
 			</div>
 
 		<!-- Footer -->
@@ -218,42 +216,19 @@
 				<div class="container medium">
 
 					<header class="major last">
-						<h2>Questions or comments?</h2>
+						<h2>Zapraszamy do kontaktu</h2>
 					</header>
 
-					<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor
-					orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus.</p>
-
-					<form method="post" action="#">
-						<div class="row">
-							<div class="col-6 col-12-mobilep">
-								<input type="text" name="name" placeholder="Name" />
-							</div>
-							<div class="col-6 col-12-mobilep">
-								<input type="email" name="email" placeholder="Email" />
-							</div>
-							<div class="col-12">
-								<textarea name="message" placeholder="Message" rows="6"></textarea>
-							</div>
-							<div class="col-12">
-								<ul class="actions special">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</div>
-						</div>
-					</form>
+					<p>
+						Telefon: 504 710 555 <br>
+						Email: michu78@poczta.onet.eu
+					</p>
 
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 					</ul>
 
-					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
+					<div class="design">Design: <a href="http://html5up.net">HTML5 UP</a></div>
 
 				</div>
 			</div>
