Added title, added reviews section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Directive by HTML5 UP</title>
+		<title>Michał Dittmajer | Remonty | Wykończenia | Instalacje</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -40,7 +40,7 @@
 						<div class="image"><img src="images/pic01.jpg" alt="" /></div>
 						<div class="content">
 							<h3>Usługi</h3>
-							<p>Oferujemy kompleksowe usługi remontowe i wykończenia pod klucz, zapewniając wysoką jakość oraz solidną obsługę, które przynoszą satysfakcję naszym klientom.</p>
+							<p>Oferujemy naprawy, kompleksowe usługi remontowe oraz wykończenia pod klucz, zapewniając wysoką jakość oraz solidną obsługę, które przynoszą satysfakcję naszym klientom.</p>
 						</div>
 					</section>
 					<section class="feature right">
@@ -64,6 +64,59 @@
 							<p>Poznaj zrealizowane przez nas projekty na <a href="https://www.instagram.com/michaldittmajer/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></p>
 						</div>
 					</section>
+
+					<div class="section-top">
+						<header class="major container medium">
+							<h2>Opinie naszych klientów</h2>
+						</header>
+						<div class="reviews">
+							<div class="review">
+								<div>
+									<b>Michał</b>
+								</div>
+								<div class="stars">
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+								</div>
+								<p class="review-text">
+									Bardzo polecam firmę. Wykonywali u mnie różnorodne prace, od elektryki przez hydraulikę, glazurnictwo, zmiany w ścianach i na białym montażu kończąc. Zawsze zachowywali wysoką jakość i staranność. Byli bardzo otwarci w komunikacji, zawsze informowali o ewentualnych problemach i nie dopuszczali do niejasności w kosztach. Ich przyjazne podejście i profesjonalizm sprawiły, że z czystym sumieniem mogę ich polecić.
+								</p>
+							</div>
+							<div class="review">
+								<div>
+									<b>Joanna</b>
+								</div>
+								<div class="stars">
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+								</div>
+								<p class="review-text">
+									Absolutnie świetna współpraca! W pełni polecam ich usługi – moje mieszkanie po kompleksowym remoncie jest dopracowane w każdym detalu. Ich podejście do pracy, fachowa wiedza i transparentność w kosztach sprawiły, że to było naprawdę przyjemne doświadczenie. Porządna ekipa, serdecznie polecam!
+								</p>
+							</div>
+							<div class="review">
+								<div>
+									<b>Beata</b>
+								</div>
+								<div class="stars">
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+								</div>
+								<p class="review-text">
+									Firma wykończyła moje mieszkanie od podstaw. Cały proces przebiegł bardzo sprawnie, a Michał, który był głównym punktem kontaktowym, był niezwykle pomocny na każdym etapie. Ekipa wykazała się doskonałą znajomością swojej pracy, co przełożyło się na ich profesjonalizm i szybkość realizacji. Byli przejrzyści i zawsze byli gotowi odpowiedzieć na każde pytanie. Polecam tę firmę wszystkim, którzy szukają solidnego wykonawcy do wykończenia swojego mieszkania.
+								</p>
+							</div>
+						</div>
+					</div>
 				</div>
 
 				<!--
@@ -225,11 +278,10 @@
 					</p>
 
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://www.instagram.com/michaldittmajer/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 					</ul>
 
 					<div class="design">Design: <a href="http://html5up.net">HTML5 UP</a></div>
-
 				</div>
 			</div>
 
