Style contact section

--- a/index.html
+++ b/index.html
@@ -267,19 +267,23 @@
 		<!-- Footer -->
 			<div id="footer">
 				<div class="container medium">
-
 					<header class="major last">
 						<h2>Zapraszamy do kontaktu</h2>
 					</header>
-
-					<p>
-						Telefon: 504 710 555 <br>
-						Email: michu78@poczta.onet.eu
-					</p>
-
-					<ul class="icons">
-						<li><a href="https://www.instagram.com/michaldittmajer/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-					</ul>
+					<div class="contact">
+						<div>
+							<i class="fas fa-phone"></i>
+							<p>504 710 555</p>
+						</div>
+						<div>
+							<i class="fas fa-envelope"></i>
+							<p>michu78@poczta.onet.eu</p>
+						</div>
+						<div>
+							<a href="https://www.instagram.com/michaldittmajer/" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
+							<p><a href="https://www.instagram.com/michaldittmajer/">@michaldittmajer</a></p>
+						</div>
+					</div>
 
 					<div class="design">Design: <a href="http://html5up.net">HTML5 UP</a></div>
 				</div>
