Add communication section

--- a/index.html
+++ b/index.html
@@ -40,28 +40,35 @@
 						<div class="image"><img src="images/pic01.jpg" alt="" /></div>
 						<div class="content">
 							<h3>Usługi</h3>
-							<p>Oferujemy naprawy, kompleksowe usługi remontowe oraz wykończenia pod klucz, zapewniając wysoką jakość oraz solidną obsługę, które przynoszą satysfakcję naszym klientom.</p>
+							<p>Oferujemy naprawy, kompleksowe usługi remontowe oraz wykończenia pod klucz, zapewniając wysoką jakość oraz solidną obsługę. Szeroka gama umiejętności umożliwia nam elastyczne podejście do projektów, zapewniając klientom kompleksowe i wszechstronne rozwiązania remontowe dostosowane do ich indywidualnych potrzeb.</p>
 						</div>
 					</section>
 					<section class="feature right">
 						<div class="image"><img src="images/pic02.jpg" alt="" /></div>
 						<div class="content">
 							<h3>20 lat doświadczenia</h3>
-							<p>Z ponad dwudziestoletnim doświadczeniem w branży remontowo-wykończeniowej, jesteśmy dumni z bogatego doświadczenia i umiejętności, które zdobyliśmy na przestrzeni lat.</p>
+							<p>Jesteśmy dumni z dwudziestoletego doświadczenia w branży remontowo-wykończeniowej oraz umiejętności, które zdobyliśmy na przestrzeni lat.</p>
 						</div>
 					</section>
 					<section class="feature left">
+						<div class="image"><img src="images/pic05.jpg" alt="" /></div>
+						<div class="content">
+							<h3>Transparentność i komunikacja</h3>
+							<p>Nasza szczera i transparentna komunikacja na każdym etapie buduje z klientami poczucie zaangażowania i pełnej jasności, co umożliwia świadome podejmowanie decyzji, eliminuje niepewności oraz usprawnia proces realizacji.</p>
+						</div>
+					</section>
+					<section class="feature right">
 						<div class="image"><img src="images/pic03.jpg" alt="" /></div>
 						<div class="content">
 							<h3>Poznan i okolice</h3>
 							<p>Podejmujemy się zleceń z Poznania i okolic.</p>
 						</div>
 					</section>
-					<section class="feature right">
+					<section class="feature left">
 						<div class="image"><img src="images/pic04.jpg" alt="" /></div>
 						<div class="content">
 							<h3>Projekty</h3>
-							<p>Poznaj zrealizowane przez nas projekty na <a href="https://www.instagram.com/michaldittmajer/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></p>
+							<p><a href="https://www.instagram.com/michaldittmajer/">Poznaj zrealizowane przez nas projekty na <a href="https://www.instagram.com/michaldittmajer/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></a></p>
 						</div>
 					</section>
 
