--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Directive by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Michał Dittmajer | Wykończenia | Remonty | Instalacje</title>
@@ -12,8 +7,9 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
+
 		<!-- Header -->
-			<div id="header">
+			<div id="header" class="fade-in-animation">
 				<h1>Michał Dittmajer</h1>
 				<p>Wykończenia | Remonty | Instalacje</p>
 				<div class="header-icons">
@@ -25,40 +21,40 @@
 
 		<!-- Main -->
 			<div id="main">
-				<header class="major container medium">
+				<header class="major container medium fade-in-animation">
 					<h2>O nas</h2>
 				</header>
 
 				<div class="box alt container">
-					<section class="feature left">
+					<section class="feature left position-animation">
 						<div class="image"><img src="images/pic01.jpg" alt="" /></div>
 						<div class="content">
 							<h3>Usługi</h3>
 							<p>Oferujemy naprawy, kompleksowe usługi remontowe oraz wykończenia pod klucz, zapewniając wysoką jakość oraz solidną obsługę. Szeroka gama umiejętności umożliwia nam elastyczne podejście do projektów, zapewniając klientom kompleksowe i wszechstronne rozwiązania remontowe dostosowane do ich indywidualnych potrzeb.</p>
 						</div>
 					</section>
-					<section class="feature right">
+					<section class="feature right position-animation">
 						<div class="image"><img src="images/pic02.jpg" alt="" /></div>
 						<div class="content">
 							<h3>20 lat doświadczenia</h3>
 							<p>Jesteśmy dumni z dwudziestoletego doświadczenia w branży remontowo-wykończeniowej oraz umiejętności, które zdobyliśmy na przestrzeni lat.</p>
 						</div>
 					</section>
-					<section class="feature left">
+					<section class="feature left position-animation">
 						<div class="image"><img src="images/pic05.jpg" alt="" /></div>
 						<div class="content">
 							<h3>Transparentność i komunikacja</h3>
 							<p>Nasza szczera i transparentna komunikacja na każdym etapie buduje z klientami poczucie zaangażowania i pełnej jasności, co umożliwia świadome podejmowanie decyzji, eliminuje niepewności oraz usprawnia proces realizacji.</p>
 						</div>
 					</section>
-					<section class="feature right">
+					<section class="feature right position-animation">
 						<div class="image"><img src="images/pic03.jpg" alt="" /></div>
 						<div class="content">
 							<h3>Poznan i okolice</h3>
 							<p>Podejmujemy się zleceń z Poznania i okolic.</p>
 						</div>
 					</section>
-					<section class="feature left">
+					<section class="feature left position-animation">
 						<div class="image projects-gallery">
 							<a href="images/projects/1.jpg" class="glightbox" data-gallery="gallery1">
 								<img src="images/projects/1.jpg" alt="image" />
@@ -132,150 +128,6 @@
 						</div>
 					</div>
 				</div>
-
-				<!--
-				<div class="box container">
-					<header>
-						<h2>A lot of generic stuff</h2>
-					</header>
-					<section>
-						<header>
-							<h3>Paragraph</h3>
-							<p>This is the subtitle for this particular heading</p>
-						</header>
-						<p>Phasellus nisl nisl, varius id <sup>porttitor sed pellentesque</sup> ac orci. Pellentesque
-						habitant <strong>strong</strong> tristique <b>bold</b> et netus <i>italic</i> malesuada <em>emphasized</em> ac turpis egestas. Morbi
-						leo suscipit ut. Praesent <sub>id turpis vitae</sub> turpis pretium ultricies. Vestibulum sit
-						amet risus elit.</p>
-					</section>
-					<section>
-						<header>
-							<h3>Blockquote</h3>
-						</header>
-						<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget.
-						tempus euismod. Vestibulum ante ipsum primis in faucibus.</blockquote>
-					</section>
-					<section>
-						<header>
-							<h3>Divider</h3>
-						</header>
-						<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
-						ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
-						facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
-						tempus euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-						posuere cubilia.</p>
-						<hr />
-						<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
-						ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
-						facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
-						tempus euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-						posuere cubilia.</p>
-					</section>
-					<section>
-						<header>
-							<h3>Unordered List</h3>
-						</header>
-						<ul class="default">
-							<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-							<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-							<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-							<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-						</ul>
-					</section>
-					<section>
-						<header>
-							<h3>Ordered List</h3>
-						</header>
-						<ol class="default">
-							<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-							<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-							<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-							<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-						</ol>
-					</section>
-					<section>
-						<header>
-							<h3>Table</h3>
-						</header>
-						<div class="table-wrapper">
-							<table class="default">
-								<thead>
-									<tr>
-										<th>ID</th>
-										<th>Name</th>
-										<th>Description</th>
-										<th>Price</th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr>
-										<td>45815</td>
-										<td>Something</td>
-										<td>Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</td>
-										<td>29.99</td>
-									</tr>
-									<tr>
-										<td>24524</td>
-										<td>Nothing</td>
-										<td>Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</td>
-										<td>19.99</td>
-									</tr>
-									<tr>
-										<td>45815</td>
-										<td>Something</td>
-										<td>Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</td>
-										<td>29.99</td>
-									</tr>
-									<tr>
-										<td>24524</td>
-										<td>Nothing</td>
-										<td>Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</td>
-										<td>19.99</td>
-									</tr>
-								</tbody>
-								<tfoot>
-									<tr>
-										<td colspan="3"></td>
-										<td>100.00</td>
-									</tr>
-								</tfoot>
-							</table>
-						</div>
-					</section>
-					<section>
-						<header>
-							<h3>Form</h3>
-						</header>
-						<form method="post" action="#">
-							<div class="row">
-								<div class="col-6 col-12-mobilep">
-									<label for="name">Name</label>
-									<input class="text" type="text" name="name" id="name" value="" placeholder="John Doe" />
-								</div>
-								<div class="col-6 col-12-mobilep">
-									<label for="email">Email</label>
-									<input class="text" type="text" name="email" id="email" value="" placeholder="johndoe@domain.tld" />
-								</div>
-								<div class="col-12">
-									<label for="subject">Subject</label>
-									<input class="text" type="text" name="subject" id="subject" value="" placeholder="Enter your subject" />
-								</div>
-								<div class="col-12">
-									<label for="subject">Message</label>
-									<textarea name="message" id="message" placeholder="Enter your message" rows="6"></textarea>
-								</div>
-								<div class="col-12">
-									<ul class="actions special">
-										<li><input type="submit" value="Send" /></li>
-										<li><input type="reset" value="Reset" class="alt" /></li>
-									</ul>
-								</div>
-							</div>
-						</form>
-					</section>
-				</div>
-				-->
-
 			</div>
 
 		<!-- Footer -->
@@ -311,6 +163,7 @@
 			<script src="assets/js/main.js"></script>
 			<link rel="stylesheet" href="assets/css/glightbox.min.css" />
 			<script src="assets/js/glightbox.min.js"></script>
+			<script src="assets/js/scroll-animations-trigger.js"></script>
 
 			<script type="text/javascript">
 				const lightbox = GLightbox({
