Add magnifying-glass to gallery

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
 					<section class="feature left position-animation">
 						<div class="image projects-gallery">
 							<a href="images/projects/1.jpg" class="glightbox" data-gallery="gallery1">
+								<div class="magnifying-glass-wrapper">
+									<i class="fa fa-search-plus magnifying-glass"></i>
+								</div>
 								<img src="images/projects/1.jpg" alt="image" />
 							</a>
 							<a href="images/projects/2.jpg" class="glightbox" data-gallery="gallery1"></a>
